Revise README for 2D Pixel-Art Platformer Game
Updated project name and improved README structure.